--- a/templates/sysconf.html
+++ b/templates/sysconf.html
@@ -117,8 +117,9 @@ netInfo is dictionary containing a list of variables:
             <tr>
                 <td><font class='font12pxwhite'>ZTP user password</font></td>
                 <td><input type='password' name='ztppassword' id="ztppassword" value='{{ sysvars['ztppassword'] }}' {{disabled }} /></td>
-
-                <td colspan='4'></td>
+                <td><font class='font12pxwhite'>Telemetry source IP address</font></td>
+                <td><input type='text' name='telemetrysource' id="telemetrysource" value='{{ sysvars['telemetrysource'] }}' {{disabled }} /></td>
+                <td colspan='2'></td>
             </tr>
 
             <tr>
