--- a/templates/sysmon.html
+++ b/templates/sysmon.html
@@ -26,6 +26,7 @@
     <div data-chart="ztpProcess" class="ztpProcess" id="ztpScheduler" value="ZTP"></div>
     <div data-chart="listenerProcess" class="listenerProcess" id="listenerScheduler" value="Listener"></div>
     <div data-chart="telemetryProcess" class="telemetryProcess" id="telemetryScheduler" value="Telemetry"></div>
+    <div data-chart="deviceupgradeProcess" class="deviceupgradeProcess" id="deviceupgradeScheduler" value="Device upgrades"></div>
     <div id="systemTime" style="display:none;"></div>
 
 </div>
