--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
                     <li><a href="/clearpass">Clearpass</a></li>
                     {% endif %}
                     {% if va("mobilityaccess","submenu")== True %}
-                    <li><a href="/mobility">Mobility</a></li>
+                    <li><a href="/gateways">Gateways</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -35,14 +35,28 @@
         <div class="dropdown align_left">
             <div class="col_1">
                 <ul class="simple">
-                    {% if va("ztpimageaccess","submenu")== True %}
-                    <li><a href="/ztpimage">Image repository</a></li>
-                    {% endif %}
                     {% if va("ztptemplateaccess","submenu")== True %}
                     <li><a href="/ztptemplate">Templates</a></li>
                     {% endif %}
                     {% if va("ztpdeviceaccess","submenu")== True %}
                     <li><a href="/ztpdevice">Devices</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </li>
+    {% endif %}
+    {% if va("deviceupdates","menu")== True %}
+    <li class="menu_item">
+        <a href="#" class="drop">Device updates</a>
+        <div class="dropdown align_left">
+            <div class="col_1">
+                <ul class="simple">
+                    {% if va("imageaccess","submenu")== True %}
+                    <li><a href="/deviceimages">Image repository</a></li>
+                    {% endif %}
+                    {% if va("upgradescheduleraccess","submenu")== True %}
+                    <li><a href="/upgradescheduler">Upgrade information</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -122,6 +136,9 @@
                     {% if va("sysroleaccess","submenu")== True %}
                     <li><a href="/userroles">Roles</a></li>
                     {% endif %}
+                    {% if va("deviceattributesaccess","submenu")== True %}
+                    <li><a href="/deviceattributes">Device attributes</a></li>
+                    {% endif %}
                     {% if va("sysadminaccess","submenu")== True %}
                     <li><a href="/sysconf">System configuration</a></li>
                     {% endif %}
@@ -135,28 +152,14 @@
     {% endif %}
 
 
-    <li id="liProgress" class="nav-float" style="width: 300px;display: none; overflow: visible;">
+    <li id="liProgress" class="nav-float" style="width: 300px;display: none; overflow: visible;text-decoration: none;pointer-events:none;">
         <div class="progressContainer" id="progressContainer">
             <div class="progressInfo" id="progressInfo"></div>
             <div class="progressBar" id="progressBar"></div>
         </div>
     </li>
 
-    <li class="nav-float" style="width: 30px; overflow: visible;">
-        <div class="progresstooltip" id="progresstooltip" style="display: none;"><img src="/static/images/information.png" width="15px" height="15px"><div class="progresstooltiptext" id="progresstooltiptext"></div></div>
-    </li>
-    <li class="nav-float">
-        {% if message is not defined %}
-        {% set message=[] %}
-        {% endif %}
-
-        {% if message[0]=="-" %}
-        <a style="color: red;">Notice: {{ message[1] }}</a>
-        {% elif message[0]=="+" %}
-        <a style="color: green;">Notice: {{ message[1] }}</a>
-        {% endif %}
-
-    </li>
+    
 
     <li class="menu_right">
         <a title="Logout"></a>
